@@ -1,3 +1,11 @@
+1997-12-02  Daniel.Weaver
+
+	* tack.c, init.c: ncurses-4.1-971220
+
+1997-11-30  Daniel.Weaver
+
+	* edit.c: ncurses-4.1-971220
+
 1997-11-29  Daniel.Weaver
 
 	* charset.c, pad.c: ncurses-4.1-971220
